--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,15 @@ html {
   font-size: 14px;
 }
 
+h2 {
+  margin: 0.5rem 0 1rem 0;
+}
+
 .multiplier {
   padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
 .p-button.delete-button {
-  width: 2.4rem;
-  padding: 0.5rem;
+  width: 1.6rem;
+  padding: 0.2rem;
 }
