--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,9 @@ html {
   font-size: 14px;
 }
 
-h2 {
-  margin: 0.5rem 0 1rem 0;
+.p-datatable .p-datatable-tbody > tr > td.p-frozen-column {
+  z-index: 999;
+  border-right-width: 1px;
 }
 
 .multiplier {
